--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.6.2",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.8"
