--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "firebase": "^11.9.1",
     "lottie-react": "^2.4.1",
