--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
+    "dompurify": "^3.2.6",
     "firebase": "^11.9.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.513.0",
+    "marked": "^16.1.2",
     "motion": "^12.16.0",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
